--- a/chat_client.html
+++ b/chat_client.html
@@ -18,7 +18,10 @@
 </head>
 <body>
     <div class="chat-container">
-        <h2>Agent Chat</h2>
+        <div style="display:flex;justify-content:space-between;align-items:center;">
+            <h2 style="margin:0;">Agent Chat</h2>
+            <span id="version" style="font-size:0.95em;color:#888;">v1.0.0</span>
+        </div>
         <div class="messages" id="messages"></div>
         <div class="input-row">
             <input type="text" id="userInput" placeholder="Type your message..." />
