--- a/chat_client.html
+++ b/chat_client.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Vibe coded... use with care!-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,5 +74,6 @@
             if (e.key === 'Enter') sendMessage();
         });
     </script>
+    <!-- Vibe coded... use with care!-->
 </body>
 </html>
